--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,7 @@ jobs:
           format: json 
           # Regex for filtering files, for example to get files of specific type.
           # optional, default is 
-          filter: 
-            - *.yaml
-            - *.yml
+          filter: *.yml *.yaml
   verify_ansible:
     needs:
       - changes
