Fixed the unexpected value again

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,7 @@ jobs:
           format: json 
           # Regex for filtering files, for example to get files of specific type.
           # optional, default is 
-          filter:
-            - "*.yml"
+          filter: "*.yml"
 
   verify_ansible:
     needs:
@@ -36,7 +35,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ansible_version: "2.9.25"
+        ansible_version:
+          - "2.9.25"
         changed_file: ${{ fromJson(needs.changes.outputs.change_file) }}
     steps:
       - name: Checkout
