--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        changed_file: ${{ fromJson(needs.changes.outputs.changed_file) }}
+        changed_file:
+          - ${{ fromJson(needs.changes.outputs.changed_file) }}
         ansible_version:
           - "2.9.25"
     name: Check ${{ matrix.changed_file }}
