corrected the variable name 4

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         changed_file:
-          - ${{ fromJson(needs.changes.outputs.changed_file) }}
+          - "${{ fromJson(needs.changes.outputs.changed_file) }}"
         ansible_version:
           - "2.9.25"
     name: Check ${{ matrix.changed_file }}
