--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,11 @@ jobs:
       changed_file: ${{ steps.files.outputs.added_modified }}
     steps:
       - name: files
-        uses: InfraWay/get-changed-files@v2.0
+        uses: tj-actions/changed-files@v13.1
         with:
-          # GitHub token for GitHub API requests. Users shouldn't need to set this themselves.
-          token: ${{ github.token }}
-          # Format of the steps output context. Can be 'space-delimited', 'csv', 'json' or 'object'.
-          # default is space-delimited
-          format: json 
-          # Regex for filtering files, for example to get files of specific type.
-          # optional, default is 
-          filter: '\.y*.ml$'
+          files: |
+            *.yaml
+            *.yml
 
   verify_ansible:
     needs:
